Project

General

Profile

Actions

Bug #18333

closed

rgw: Realm set does not create a new period

Added by Wido den Hollander over 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
rgw,realm,radosgw-admin
Backport:
jewel, kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When importing a realm from a JSON file using 'realm set' a period is not created.

root@alpha:~# radosgw-admin realm set --infile backup/realm.json
{
    "id": "58612f93191c0b6b82c0cbeccc77cde8",
    "name": "gn.zm1",
    "current_period": "",
    "epoch": 0
}
root@alpha:~# cat backup/realm.json 
{
    "id": "58612f93191c0b6b82c0cbeccc77cde8",
    "name": "gn.zm1" 
}

root@alpha:~#

This leads to no period being present.

When trying to prepare for a new period this fails:

root@alpha:~# radosgw-admin period prepare
could not init realm : (2) No such file or directory
root@alpha:~#

When you supply the ID of the realm it seems to work, but it doesn't.

root@alpha:~# radosgw-admin period update
Error initializing realm (2) No such file or directory
root@alpha:~# radosgw-admin period update --realm-id=58612f93191c0b6b82c0cbeccc77cde8
period init failed: (2) No such file or directory
2016-12-22 13:01:17.799324 7f95dcadba00  1 error read_lastest_epoch .rgw.root:periods..latest_epoch
2016-12-22 13:01:17.799338 7f95dcadba00  0 failed to use_latest_epoch period id  realm  id 58612f93191c0b6b82c0cbeccc77cde8 : (2) No such file or directory
root@alpha:~#

To me this seems broken, since this works:

- Create new realm
- Change realm ID in zonegroup and zone JSON files
- Import zonegroup and zone from JSON files

This was tested against version 10.2.5


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #18498: jewel: rgw: Realm set does not create a new periodResolvedNathan CutlerActions
Copied to rgw - Backport #18499: kraken: rgw: Realm set does not create a new periodResolvedNathan CutlerActions
Actions #1

Updated by Orit Wasserman over 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Yehuda Sadeh over 7 years ago

  • Backport set to jewel
Actions #3

Updated by Casey Bodley over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from jewel to jewel, kraken
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #18498: jewel: rgw: Realm set does not create a new period added
Actions #5

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #18499: kraken: rgw: Realm set does not create a new period added
Actions #6

Updated by Nathan Cutler almost 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF