radosgw-admin: realm set should create a new realm

Fixes: http://tracker.ceph.com/issues/18333
Signed-off-by: Orit Wasserman <owasserm@redhat.com>
(cherry picked from commit e23339c9ef34f6b9df90b1ab64b550af9b541d9e)